[metadata]
name = pybackup
version = 1.0.0
author = Selvaraj Iyyappan
author_email = selvaraj2003@gmail.com
description = A production-ready Python CLI tool for automated backups of files, databases, and system configurations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/selvaraj2003/pybackup
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Topic :: System :: Archiving :: Backup
    Topic :: System :: Systems Administration
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux

[options]
packages = find:
python_requires = >=3.9
include_package_data = True
install_requires =
    PyYAML>=6.0
    click>=8.1
    python-dotenv>=1.0
    cryptography>=41.0
    requests>=2.31

[options.packages.find]
exclude =
    tests
    examples

[options.extras_require]
dev =
    pytest>=8.0
    black>=24.0
    flake8>=7.0
    isort>=5.13
    mypy>=1.8

[options.entry_points]
console_scripts =
    pybackup=pybackup.cli:main